verify.err
  File "send_line_flex.py", line 2
    import os, json, ...
                     ^^^
SyntaxError: invalid syntax
